--- a/src/task.css
+++ b/src/task.css
@@ -25,7 +25,6 @@
     
 }
 
-
 .deleteimg{
     width: 13px;
    height: 13px;
@@ -47,7 +46,7 @@
 .todo-heading{
     padding: 0%;
     margin: 0%;
-    color: white;
+    color: rgb(26, 24, 24);
     text-decoration: underline;
     margin-left: 60px;
 }
@@ -93,24 +92,36 @@
     flex-direction: column;
     left: 40%;
     gap: 20px;
-    background-color: rgb(104, 101, 101);
+    background-color: rgb(228, 223, 223);
   
     padding: 2%;
     border-radius: 10px;
 }
 .fome-bg{
-    background-color: aqua;
+   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.596);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
    
    
 }
+.purpose{
+    color:rgb(182, 179, 179) ;
+}
 .submit
 {
-    background-color: rgb(245, 244, 244);
+    background-color: rgb(75, 73, 73);
     border: none;
     padding: 2%;
     border-radius: 5px;
     font-size: large;
-    
+    color: white;
 
 }
 .delete-fome{
